# XorKey

./: .gitignore  LICENSE  README.md  installation.txt  pyproject.toml
tests/: test.py  test2.py  test3.py  test4.py  testinfo.txt
xorkey/: core.py  main.py  utils.py
