
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xorkey"
version = "0.3"
authors = [{name="DevTheCoder-py"}]
dependencies = [
  #  "argcomplete>=3.0,<4"
]


[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
xorkey = "xorkey.main:main"
